@@ -15,3 +15,18 @@ table.typo3-page-sysnote tr td {
 table.typo3-page-sysnote tr td.c-headLine {
 	background-color: #c5c1b5;
 }
+
+table#langTable td.c-blocked {
+	background-color: #f6d3cf;
+}
+
+table#langTable td.c-ok {
+	background-color: #cdeaca;
+}
+
+table#langTable td.c-fallback {
+}
+
+table#langTable td.c-leftLine {
+	border-left: 1px solid #a2aab8;
+}
